<?xml version="1.0"?>
<package format="3">
  <name>robot_patrol</name>
  <version>0.1.0</version>
  <description>The robot_patrol package</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- **Build tool dependencies** -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- **Build dependencies** -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- **Build export dependencies** -->
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rosidl_default_generators</build_export_depend>

  <!-- **Execution dependencies** -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- **Member of group for interface packages** -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


